# PyAsciiMotion

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: ASCII Motion.json  Birds.json
src/pyasciimotion/: __init__.py  __main__.py  cli.py  models.py  parser.py  player.py  renderer.py  utils.py
tests/: test_pyasciimotion.py
