[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyasciimotion"
version = "0.1.1"
description = "Load and play ASCII Motion animations in your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Web3-Serializer" },
]
keywords = ["ascii", "animation", "terminal", "ascii-motion", "ansi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Terminals",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Web3-Serializer/PyAsciiMotion"
Documentation = "https://github.com/Web3-Serializer/PyAsciiMotion#readme"
Repository = "https://github.com/Web3-Serializer/PyAsciiMotion"
Issues = "https://github.com/Web3-Serializer/PyAsciiMotion/issues"

[project.scripts]
pyasciimotion = "pyasciimotion.cli:entry"

[tool.hatch.build.targets.wheel]
packages = ["src/pyasciimotion"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
